# cmake_learning

./: .gitignore  README.md  delete_build.sh  gen_build_dir.sh
Demo1_cmake_constant_variable/: CMakeLists.txt  run.sh
Demo1_cmake_constant_variable/src/: CMakeLists.txt
Demo1_intro_cmake/: hello
Demo2/: CMakeLists.txt  main.cc
Demo2_multi_dirs/: readme.md
Demo2_multi_dirs/exercise1_multi_files/: CMakeLists.txt  redme.md
Demo2_multi_files/: CMakeLists.txt
Demo2_multi_files/exercise2/: CMakeLists.txt
Demo2_multi_files_usage/exercise1/: run.sh
Demo2_multi_files_usage/exercise2/: CMakeLists.txt  run.sh
Demo2_multi_files_usage/exercise2 copy/: readme.md
Demo3_multi_dirs/exercise1_save_bin/: CMakeLists.txt
Demo3_multi_dirs/exercise2_out_library/: CMakeLists.txt  CMakeLists_easy.txt  main.cc
Demo3_multi_dirs/exercise2_third_library/: CMakeLists_easy.txt
Demo3_multi_dirs_useage/exercise1_save_bin/: readme.md
Demo3_multi_dirs_useage/exercise2_third_library/: CMakeLists.txt  main.cc  readme.md  run.sh
Demo3_multi_dirs_useage/exercise2_third_library/math/: CMakeLists.txt
Demo3_multi_dirs_useage/exercise3_1_basic_cmakefile/: CMakeLists.txt  main.cc  run.sh  只使用add_executable这个函数readme.md
Demo3_multi_dirs_useage/exercise3_1_basic_cmakefile/math3_1/: MathFunctions.cc  MathFunctions.cpp  MathFunctions.h
Demo3_multi_dirs_useage/exercise3_1_basic_cmakefile/tools/: utils.cpp  utils.h
Demo3_multi_dirs_useage/exercise3_2_one_cmakefile/: CMakeLists.txt  readme.md  run.sh
Demo3_multi_dirs_useage/exercise3_simple_style/: CMakeLists.txt
Demo3_multi_files/: CMakeLists.txt  main.cc
Demo4/: CMakeLists.txt
Demo4_config_files/: cmakelists_1.txt
Demo4_config_files/exercise1_intro_config/: main.cpp
Demo4_config_files/exercise2_config/: main.cc
Demo4_dynamic_lib_generate_install/exercise1_generate_shared_lib/lib/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise2_generate_shared_and_static_lib/lib/: CMakeLists.txt  hello.cpp
Demo4_dynamic_lib_generate_install/exercise4_generate_shared_and_static_lib_install/: README.md
Demo4_dynamic_lib_generate_install/exercise4_generate_shared_and_static_lib_install/lib/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise5_use_find_package_build_official_module/src/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise5_use_shared_lib_include_directories/src/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise6_use_shared_lib_include_directories/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise6_use_shared_lib_include_directories/cmake/: findHELLO.cmake
Demo4_dynamic_lib_generate_install/exercise6_use_shared_lib_include_directories/src/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise7_use_find_package_build_self_define/: CMakeLists.txt  README.md
Demo4_dynamic_lib_generate_install/exercise7_use_find_package_build_self_define/cmake/: FindHELLO.cmake
Demo4_dynamic_lib_generate_install/exercise7_use_find_package_build_self_define/src/: CMakeLists.txt
Demo4_dynamic_lib_generate_install/exercise7_use_shared_lib_find_package/src/: CMakeLists.txt  main.cpp
Demo5_install_dynamic_and_static_lib/exercise1_easy_install/: import_dylib.py
Demo5_install_dynamic_and_static_lib/exercise1_easy_install/lib/: CMakeLists.txt  hello.c
Demo5_install_dynamic_and_static_lib/exercise2_config_install/: CMakeLists.txt
Demo5_install_intro/exercise1_easy_install/: CMakeLists.txt
Demo5_install_intro/exercise1_easy_install/lib/: CMakeLists.txt
Demo5_use_dynmaic_lib/exercise1_use_shared_lib_include_directories/: CMakeLists.txt
Demo5_use_dynmaic_lib/exercise2_use_find_package_build_official_module/: CMakeLists.txt
Demo5_use_dynmaic_lib/exercise2_use_find_package_build_official_module/src/: CMakeLists.txt
Demo6_cmake_constant_variable/: CMakeLists.txt
Demo6_cmake_constant_variable/anthor/: CMakeLists.txt
Demo6_dynamic_lib/exercise2_generate_shared_and_static_lib/: CMakeLists.txt  README.md
Demo6_dynamic_lib/exercise2_generate_shared_and_static_lib/lib/: CMakeLists.txt
Demo6_dynamic_lib/exercise3_generate_shared_and_static_lib_install/: README.md
Demo6_dynamic_lib/exercise3_generate_shared_and_static_lib_install/lib/: CMakeLists.txt
Demo6_dynamic_lib/exercise4_generate_shared_lib_invoke_by_python/: CMakeLists.txt
Demo6_dynamic_lib/exercise5_generate_shared_lib_invoke_by_python/: CMakeLists.txt
Demo6_dynamic_lib/exercise5_use_shared_lib/src/: CMakeLists.txt
Demo6_dynamic_lib1/exercise1_shared_lib/lib/: CMakeLists.txt  hello.c
Demo6_dynamic_lib1/exercise3_generate_shared_static/: README.md
Demo6_dynamic_lib1/exercise5/: main.cpp
Demo6_use_config_and_param/exercise1_basic_usage_config/: CMakeLists.txt
Demo6_use_config_and_param/exercise2_multi_dir_use_config/: CMakeLists.txt
Demo6_use_dynmaic_lib/exercise1_use_shared_lib_include_directories/: README.md
Demo6_use_dynmaic_lib/exercise2_use_find_package_build_official_module/: CMakeLists.txt
Demo7_dir/exercise4/lib/: CMakeLists.txt
Demo7_dir/exercise7/: README.md
Demo8_dynamic_lib/exercise8/: import_dylib.py
Demo8_dynamic_lib1/exercise10/: config.h.in  main.out
Demo8_dynamic_lib1/exercise11/: CMakeLists.txt
Demo8_dynamic_lib1/exercise11/src/: CMakeLists.txt
Demo8_dynamic_lib1/exercise8/lib/: CMakeLists.txt
Demo8_dynamic_lib1/exercise9/: link_dylib.py
demo/: readme.md
demo/lib/: libhello.dylib
exercise1/: CMakeLists.txt
exercise3/: CMakeLists.txt
exercise4/: CMakeLists.txt  README.md
exercise4/lib/: CMakeLists.txt  hello.cpp
exercise5/lib/: CMakeLists.txt
exercise6/lib/: CMakeLists.txt
exercise7/: CMakeLists.txt
exercise7/src/: CMakeLists.txt
exercise8/lib/: hello.cpp
